2016-08-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp.c: Remove unneeded includes.

2016-08-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c: Removed an unneeded include.

2016-08-23  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* CMakeLists.txt, src/CMakeLists.txt, tools/greenbone-nvt-sync.in
	(OPENVAS_PID_DIR): Rename to OPENVAS_RUN_DIR.

	* src/openvassd.c (main): Default to listening on
	OPENVAS_PID_DIR/openvassd.sock unix socket.

2016-08-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (init_unix_network): Set the default socket file mode
	to 660.

2016-08-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Add --listen-mode option.
	(init_unix_network): Add parameter for socket file mode.

2016-08-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Add --listen-group option.
	(init_unix_network): Add parameter for socket group.

2016-08-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Add --listen-owner option.
	(init_unix_network): Add parameter for socket owner.

2016-08-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* tools/greenbone-nvt-sync.in: Expect proxy auth file in
	OPENVAS_SYSCONF_DIR.  Patch by Sven Haardiek.

2016-08-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (scanner_thread): Adjust serving process title in unix
	socket case.

2016-08-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (is_client_present), src/hosts.c (hosts_read_client): Check
	socket type with fd_is_stream() instead of unix_socket_path variable.

2016-08-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (is_client_present): Don't call
	openvas_get_socket_from_connection() in unix socket case as it is not an
	openvas stream socket.

	* src/hosts.c (forward): Don't define buf as static variable.
