@@ -1,3 +1,8 @@
+2016-09-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/attack.c (launch_plugin), src/pluginlaunch.c
+	(update_running_processes): Log plugin name alongside of the oid.
+
 2016-08-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/ntp.c: Remove unneeded includes.
